# tinytrix

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: main.rs
